now working the right click -> Run -> Ride Camel now working! :)